# steam-runtime-tools

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  COPYING.MIT  COPYING.Zlib  Makefile  Makefile.am  Makefile.libcapsule  README  README.md  THIRD-PARTY.md  autogen.sh  build-relocatable-install.in  build-relocatable-install.py  config.h.in  configure-libcapsule.sh  configure.ac  copy-source-code.py  documentation.mk  get-pressure-vessel-test-containers.sh  meson.build  meson_options.txt  populate-depot.py  pressure-vessel-locale-gen  pressure-vessel-test-ui  pressure-vessel-unruntime  pressure-vessel-unruntime-scout  pressure-vessel-unruntime-test-ui  pressure-vessel-wrap  pressure-vessel-wrap.sh  run-in-scout  toolmanifest.vdf
helpers/: capture-libs.c  check-gl.c  check-gl.cpp  check-gles.c  check-locale.c  check-va-api.c  check-vdpau.c  check-vulkan.c  check-vulkan.cpp  check-xdg-portal.c  create-meson-in-subdir.py  detect.c  identify-lib.c  identify-lib.h  identify-platform.c  identify-platform.h  inspect-library-libelf.c  inspect-library-utils.c  inspect-library-utils.h  inspect-library.c  meson.build  true.c  wflinfo.c
helpers/haswell/: meson.build
helpers/i386/: meson.build
helpers/i386-linux-gnu/: meson.build
helpers/i486/: meson.build
helpers/i586/: meson.build
helpers/i686/: meson.build
helpers/lib/: meson.build
helpers/lib/i386-linux-gnu/: meson.build
helpers/lib/multiarch/: meson.build
helpers/lib/x86_64-linux-gnu/: meson.build
helpers/lib32/: meson.build
helpers/lib64/: meson.build
helpers/multiarch/: meson.build
helpers/x86_64/: meson.build
helpers/x86_64-linux-gnu/: meson.build
helpers/xeon_phi/: meson.build
libcurl-compat/: 3-gnutls.versionscript  3.versionscript  4-gnutls.versionscript  4.versionscript  README.md  both-gnutls.versionscript  both.versionscript  compat-setup.c  libc6.symbols  libcurl4-gnutls.symbols  libcurl4.symbols  meson.build  mock-curl.c
libcurl-compat/test-fixtures/: meson.build  print-version.c
libcurl-compat/test-fixtures/3/: meson.build  mock-curl.c
libcurl-compat/test-fixtures/4/: libcurl4-gnutls.symbols  libcurl4.symbols  meson.build  mock-curl.c
libcurl-compat/test-fixtures/both/: meson.build  mock-both-curl-gnutls.c  mock-both-curl.c
libcurl-compat/test-fixtures/incompatible/: incompatible.versionscript  meson.build  mock-curl.c
libcurl-compat/test-fixtures/none/: meson.build  mock-curl.c
libcurl-compat/test-fixtures/scout/: libcurl3-gnutls.symbols  libcurl3.symbols  meson.build  mock-curl.c
man/: adverb.1.md  launch.1.md  launcher.1.md  locale-gen.1.md  meson.build  unruntime.1.md  wrap.1.md
pressure-vessel/: CONTRIBUTING.md  README.md  THIRD-PARTY.md  adverb.1.md  adverb.c  build-relocatable-install.in  build-relocatable-install.py  bwrap-lock.c  bwrap-lock.h  bwrap-main.c  bwrap.c  bwrap.h  com.steampowered.PressureVessel.Launcher1.xml  config.h.in  copy-source-code.py  elf-utils.c  elf-utils.h  environ.c  environ.h  exports.c  exports.h  flatpak-bwrap-private.h  flatpak-bwrap.c  flatpak-common-types-private.h  flatpak-context-private.h  flatpak-context.c  flatpak-error.h  flatpak-exports-private.h  flatpak-exports.c  flatpak-portal.h  flatpak-run-private.h  flatpak-run.c  flatpak-session-helper.h  flatpak-utils-base-private.h  flatpak-utils-base.c  flatpak-utils-private.h  flatpak-utils.c  glib-backports.c  glib-backports.h  graphics-provider.c  (+48 more)
pressure-vessel/man/: meson.build
steam-runtime-tools/: architecture-internal.h  architecture.c  architecture.h  config.h.in  container-internal.h  container.c  container.h  cpu-feature-internal.h  cpu-feature.c  cpu-feature.h  desktop-entry-internal.h  desktop-entry.c  desktop-entry.h  direct-input-device-internal.h  direct-input-device.c  glib-backports-internal.h  glib-backports.c  glib-compat.h  graphics-drivers-dri.c  graphics-drivers-dri.h  graphics-drivers-egl.c  graphics-drivers-egl.h  graphics-drivers-from-report.c  graphics-drivers-glx.c  graphics-drivers-glx.h  graphics-drivers-json-based-internal.h  graphics-drivers-json-based.c  graphics-drivers-vaapi.c  graphics-drivers-vaapi.h  graphics-drivers-vdpau.c  graphics-drivers-vdpau.h  graphics-drivers-vulkan.c  graphics-drivers-vulkan.h  graphics-drivers.c  graphics-internal.h  graphics-test-defines.h  graphics.c  graphics.h  input-device-internal.h  input-device.c  (+54 more)
tests/: CapsuleTest.pm  README.md  adverb.c  adverb.py  architecture.c  bwrap-lock.c  capture-libs.pl  cheap-copy.c  cheap-copy.py  check-python.py  check-requirements-cli.c  check-sh.sh  container.c  containers.py  cpu-feature.c  dependency.c  dependent.c  desktop-entry.c  fake-home.c  fake-home.h  find-myself.c  find-python.sh  generate-sysroots.py  gl-shim.pl  graphics-test-defines.h  graphics.c  helper.c  i386-mock-debian-inspect-library.c  i386-mock-fedora-inspect-library.c  identify-library-abi-cli.c  init-project.pl  input-device.c  inside-runtime.py  inside-scout.py  invocation.py  json-utils.c  launcher.py  libcurl-compat.py  libdl.c  library.c  (+81 more)
tests/depot/: README.md  pressure-vessel.py
tests/fake-icds/: no-api-version.json  no-library.json
tests/fake-icds/egl1/: z.json
tests/input-monitor-outputs/: no-details.json  odd.json  steam-controller.json
tests/json-report/: full-good-report.json  newer-report.json  partial-report-2.json  partial-report.json
tests/manual/: gl.pl
tests/pressure-vessel/: adverb.py  bwrap-lock.c  cheap-copy.c  cheap-copy.py  containers.py  elf-get-soname.c  helper.c  inside-runtime.py  launcher.py  meson.build  mtree-apply.c  mtree-apply.py  prepare-test-depots.sh  pressure-vessel.supp  relocatable-install.py  resolve-in-sysroot.c  test-locale-gen.sh  test-utils.c  test-utils.h  testutils.py  utils.c  utils.py  wait-for-child-processes.c  wrap-setup.c
tests/shim/: libnotgl.so.0.symbols  libnotgl.so.c.dlopen  libnotgl.so.c.dlsym
tests/version1/: libversionedlikedbus.c  libversionedprivatenothidden.c
tests/version2/: libunversionedabibreak.c  libunversionedsymbols.c  libversionedlikedbus.map  libversionedlikeglibc.c  libversionedprivatenothidden.map
(+390 files in other folders)
